fix: update spacing b/w components

--- a/src/components/Episodes/style.scss
+++ b/src/components/Episodes/style.scss
@@ -1,9 +1,21 @@
 .episodes-section {
+    height: 100%;
     display: flex;
     padding: 2rem 1rem;
 }
 
 .episodes-container {
+    height: 100%;
+    margin: 0;
+    padding: 2rem 1rem;
+    display: flex;
+    flex-direction: column;
+    flex-flow: wrap;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.episodes-list {
     margin: 0;
     padding: 2rem 1rem;
     display: flex;
@@ -11,4 +23,12 @@
     flex-flow: wrap;
     justify-content: center;
     align-items: center;
+}
+
+.episodes-pagination {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
