--- a/src/components/Filters/style.scss
+++ b/src/components/Filters/style.scss
@@ -1,6 +1,6 @@
 .filters-section {
     height: fit-content;
-    width: 300px;
+    width: 20%;
     display: flex;
     flex-direction: column;
     align-items: center;
